samples/_failures_safe/1761183622_294f31_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5a9da807.c: In function ‘event_to_string’:
./samples/SAFE/__tmp_5a9da807.c:159:52: error: missing terminating " character
  159 |         "START", "DATA_READY", "PROCESS_COMPLETE", "WRITE
      |                                                    ^~~~~~
./samples/SAFE/__tmp_5a9da807.c:159:9: error: expected expression at end of input
  159 |         "START", "DATA_READY", "PROCESS_COMPLETE", "WRITE
      |         ^~~~~~~
./samples/SAFE/__tmp_5a9da807.c:159:9: error: expected declaration or statement at end of input
